Update opwire-agent.cfg file

--- a/opwire-agent.cfg
+++ b/opwire-agent.cfg
@@ -1,5 +1,5 @@
 {
-  "version": "v1.0.5",
+  "version": "v1.0.6",
   "agent": {
     "explanation-enabled": true
   },
@@ -12,6 +12,9 @@
       "MYSQL_USERNAME": "root",
       "MYSQL_PASSWORD": "root"
     },
-    "settings-format": "flat"
+    "settings-format": "json"
+  },
+  "http-server": {
+    "port": 8888
   }
 }
