Upgrade to opwire-agent@1.0.7

--- a/opwire-agent.cfg
+++ b/opwire-agent.cfg
@@ -1,9 +1,12 @@
 {
-  "version": "v1.0.6",
+  "version": "v1.0.7",
   "agent": {
-    "explanation-enabled": true
+    "explanation": {
+      "enabled": true
+    }
   },
   "main-resource": {
+    "pattern": "/example",
     "default": {
       "command": "php example.php"
     },
